--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <p class="promo-title">Hey!, I am Aneesh Srivastava(2211)</p>
+                <p class="promo-title">Hey!, I am Aneesh Srivastava</p>
                 <p>I designed and coded this website portfolio by myself. Just explore it and you can find
                   more about me. 
                 </p>
