--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
             <li class="nav-item">
               <a class="nav-link" href="#about-me">ABOUT ME</a>
             </li>
+              <li class="nav-item">
+              <a class="nav-link" href="#social-media">SOCIAL</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="#footer">CONTACT</a>
             </li>
