--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
       <a href="https://www.facebook.com/aneesh.srivastava.794" target="_blank"><img src="Images/facebook.png"></a>
       <a href="https:/www.linkedin.com/in/aneeshsrivastava/" target="_blank"><img src="Images/linkedin.png"></a>
       <a href="https://www.instagram.com/aneesh_not_anish/?hl=en" target="_blank" ><img src="Images/instagram.png"></a>
+      <a href="https://github.com/PROcodingMaster" target="_blank" ><img src="Images/Github Logo.png"></a>
     </div>
   </div>
 </section>
